QMS & Some Alignment fix

--- a/src/out_patients/modules/billing/submodules/dispatch-report/dispatch-report.component.scss
+++ b/src/out_patients/modules/billing/submodules/dispatch-report/dispatch-report.component.scss
@@ -35,3 +35,6 @@
 ::ng-deep .mat-table thead{
     white-space: nowrap !important;
 }
+.h-68{
+    height: 68%;
+}
