--- a/src/out_patients/modules/patient-history/patient-history.component.scss
+++ b/src/out_patients/modules/patient-history/patient-history.component.scss
@@ -28,6 +28,9 @@
 ::ng-deep table tbody tr:hover{
     table tbody tr td:nth-child(14) div img{
         background-color: white;
-    }
-    
+    }  
+}
+
+.h-65{
+    height: 65%;
 }
